[tool.poetry]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = ""
authors = ["Oleksii Dmytriiev <sysqwerty1984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
